# Leetcode

./: .gitignore  .pdm-python  404.html  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
CLRS/Chapter-2/: chap2.md  insertion-sort.py
LeetCode/: README.md  python.txt
LeetCode/1-two-sum/: 1-two-sum.py  README.md
LeetCode/100-same-tree/: 100-BFS.py  README.md
LeetCode/101-symmetric-tree/: 101-BFS-queue.py
LeetCode/107-binary-tree-level-order-traversal-II/: README.md
LeetCode/1108-defanging-an-ip-address/: 1108-defanging-an-IP-address.py
LeetCode/1119-remove-vowels-from-a-string/: 1119-remove-vowels-from-a-string.py
LeetCode/1133-largest-unique-number/: 1133-hash.py
LeetCode/1150-check-if-a-number-is-majority-element-in-a-sorted-array/: README.md
LeetCode/1180-count-substrings-with-only-one-distinct-letter/: 1180-brute-force.py
LeetCode/1186-maximum-subarray-sum-with-one-deletion/: README.md
LeetCode/121-best-time-to-buy-and-sell-stock/: 121-sliding-window-approach.py  README.md
LeetCode/125-valid-palindrome/: README.md
LeetCode/136-single-number/: README.md
algorithm/: index.html
contest/: index.html  virtual_contest.csv
contest/weekly/: index.html
data structure implementaion/: array.py
data_structure/: index.html
data_structure_implementaion/: README.md
imgs/: Untitled Diagram.drawio
leetcode/: index.html
leetcode_with_adam/: mkdocs.yml
legacy/: track.md
notes/: divideAndConquer.ipynb  python_ds.md  recursion.ipynb
python-sort/: bubble.py  insertion.py  pystack.ipynb  selection.py
search/: search_index.json
src/: 1463.ipynb  1463_animation.ipynb  autogen_nav.yml  nav_generator.py
string/: index.html
techniques/: index.html
(+1051 files in other folders)
